--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt": "~0.4.0",
     "grunt-browserify": "latest",
     "grunt-contrib-clean": "latest",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
